corrected alignment of skills icons

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,18 +1,18 @@
 .cust-icon{
-    height: 7rem;
+    height: 5.5rem;
     max-width: 7.5rem;
-    padding: 2 rem;
+    padding: 0.25rem;
 }
 
 .skl {
-    padding: 2 rem;
-    height: 7rem;
+    height: 5.5rem;
     max-width: 15rem;
+    padding: 0.25rem;
 }
 
 .pand {
-    padding: 2 rem;
-    max-height: 10rem;
+    height: 5.5rem;
     max-width: 25rem;
+    padding: 0.25rem;
 }
 
